--- a/art/index.html
+++ b/art/index.html
@@ -15,8 +15,7 @@
         </style>
     </head>
     <body>
-        <marquee class="bg-warning text-black" style="font-family: consolas, monospace;">The Praxor Website // Under Construction</marquee>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top" style="background-color: #6822b3">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top shadow" style="background-color: #6822b3">
             <a class="navbar-brand">
                 <img src="https://praxor.wtf/media/oraxor.png" width="35" height="35" d-inline-block align-text-top>
             </a>
@@ -303,24 +302,6 @@
                                             </blockquote>
                                             <figcaption class="blockquote-footer">
                                                 praxor, <cite title="Date">October 2023</cite>
-                                            </figcaption>
-                                        </figure>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="card shadow-sm">
-                                <img class="card-img-top" src="https://praxor.wtf/media/halloween-praxor.png">
-                                <div class="card-body">
-                                    <p class="card-text">Drawn by 3 fantastic artists (including the one and only praxor), this is a character concept </p>
-                                    <div class="d-flex text-back">
-                                        <figure>
-                                            <blockquote class="blockquote">
-                                                <p>"he’s not a desktop he’s a minuscule portable device"</p>
-                                            </blockquote>
-                                            <figcaption class="blockquote-footer">
-                                                milk, <cite title="Date">October 2023</cite>
                                             </figcaption>
                                         </figure>
                                     </div>
