--- a/home/index.html
+++ b/home/index.html
@@ -25,29 +25,11 @@
                     background-position: 50% 0%;
                 }
             }
-            /*
-            .fadetoblack {
-                background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
-                height: 250px; 
-                max-height: 250px;
-                width: 100%;
-                max-width: 100%;
-                display: inline-block;
-            }
-            .fadetonormal {
-                background: linear-gradient(0deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
-                height: 250px; 
-                max-height: 250px;
-                width: 100%;
-                max-width: 100%;
-                display: inline-block;
-            }
-            */
         </style>
     </head>
     <body>
         <marquee class="bg-warning text-black" style="font-family: consolas, monospace;">The Praxor Website // Under Construction</marquee>
-        <nav class="navbar navbar-expand-md bg-body-tertiary sticky-top" style="background-color: #6822b3">
+        <nav class="navbar navbar-expand-md bg-body-tertiary sticky-top shadow" style="background-color: #6822b3">
             <a class="navbar-brand">
                 <img src="https://praxor.wtf/media/oraxor.png" width="35" height="35" d-inline-block align-text-top>
             </a>
@@ -125,23 +107,6 @@
                     </div>
                 </div>
             </div>
-            <!--
-            <div class="fadetoblack"></div>
-            <div class="px-5 py-5 bg-black">
-                <div class="container">
-                    <h1 class="text-center">Hey.</h1>
-                    <div class="card">
-                        <div class="card-image-left">
-                            <img src="https://praxor.wtf/media/oraxor.png">
-                        </div>
-                        <div class="card-text">
-                            <p>Hey gays.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="fadetonormal"></div>
--->
             <div class="container">
                 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
                     <p class="col-md-4 mb-0 text-body-secondary">© 2023 The Praxor Industries</p>
