--- a/supporters/index.html
+++ b/supporters/index.html
@@ -15,8 +15,7 @@
         </style>
     </head>
     <body>
-        <marquee class="bg-warning text-black" style="font-family: consolas, monospace;">The Praxor Website // Under Construction</marquee>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top" style="background-color: #6822b3">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top shadow" style="background-color: #6822b3">
             <a class="navbar-brand">
                 <img src="https://praxor.wtf/media/oraxor.png" width="35" height="35" d-inline-block align-text-top>
             </a>
@@ -61,7 +60,7 @@
             </div>
             <div class="px-4 py-4 bg-body-secondary">
                 <div class="container">
-                    <table class="table table-dark table-striped border">
+                    <table class="table table-dark table-striped border shadow">
                         <thead>
                             <tr>
                                 <th scope="col">#</th>
