hotfix and stuff i forgor :skull:
Signed-off-by: praxor <66192947+praxor@users.noreply.github.com>

--- a/about/index.html
+++ b/about/index.html
@@ -70,7 +70,17 @@
                     <h3>Section 1: From the beginning</h3>
                     <p>ok so basically like i woke up one day, decided to get the domain praxor.tk, and then go wild with <a href="https://pages.github.com" target="_blank">Github Pages</a>. Not my proudest moment, but it certainly was a beginning for a silly goober like me who was learning HTML at the time.</p>
                     <img class="border shadow-lg" src="../media/websitescreenshot1.png" width="100%">
-                    <figcaption class="blockquote-footer">Screenshot of my first website.</figcaption>
+                    <figcaption class="text-secondary"><i>Screenshot of my first website.</i></figcaption>
+                    <hr>
+                    <h3>Section 2: The Praxor Website V2 & V3</h3>
+                    <p>I decided to start naming versions of my website as I got more progressed in my HTML knowledge! However, V2 of my website was merely a shadow update and fix of my current beginner web page portfolio thing. This is also the time where I started calling my website a virtual portfolio rather than a website about me, ofc to sound cooler. Version 3 of my website was crafted using a CSS library that I personally thought was cool, called <a href="https://github.com/vinibiavatti1/TuiCss" target="_blank">TuiCSS</a>.</p>
+                    <img class="border shadow-lg" src="../media/websitescreenshot2.png" width="100%">
+                    <figcaption class="text-secondary"><i>Screenshot of The Praxor Website V3, made with TuiCSS.</i></figcaption>
+                    <hr>
+                    <h3>Section 3: Actual Madness, Insanity even.</h3>
+                    <p>When I got to this point in my website development skills, I honestly thought this was the bomb back in late 2022. I thought this was the most swagger I have ever created yet. Little did I know I was about to humble myself extremely hard. There were no CSS libraries involved, and this website involved an animated scrolling CSS gradient background (using some stolen, yet open-source code) with some text over it. This is when I realized I needed to learn more HTML because this was not the bomb, but it was eye killing glory.</p>
+                    <img class="border shadow-lg" src="../media/websitescreenshot3.png" width="100%">
+                    <figcaption class="text-secondary"><i>Cool image of Praxor's 2nd Website Remake (Website V3, do the meth)</i></figcaption>
                 </div>
             </div>
             <div class="container" style="background-color: #511b8c;">
