--- a/home/index.html
+++ b/home/index.html
@@ -13,7 +13,7 @@
                 position: absolute;
             }
             .jumbotron-background-gradient {
-                background: linear-gradient(180deg, rgba(104,34,179,10) 0%, rgba(0,0,0,1) 100%);
+                background: linear-gradient(190deg, rgba(104,34,179,10) 0%, rgba(0,0,0,1) 100%);
                 background-size: 200% 200%;
                 animation: bg-pan-top;
             }
@@ -28,7 +28,6 @@
         </style>
     </head>
     <body>
-        <marquee class="bg-warning text-black" style="font-family: consolas, monospace;">The Praxor Website // Under Construction</marquee>
         <nav class="navbar navbar-expand-md bg-body-tertiary sticky-top shadow" style="background-color: #6822b3">
             <a class="navbar-brand">
                 <img src="https://praxor.wtf/media/oraxor.png" width="35" height="35" d-inline-block align-text-top>
@@ -63,7 +62,7 @@
         </nav>
         <main>
             <div class="px-4 py-4 text-center jumbotron-background-gradient">
-                <div class="container rounded shadow-lg" style="background-color: rgba(25,25,25,0.7);">
+                <div class="container rounded shadow-lg" style="background-color: rgba(0,0,0,0.5);">
                     <div class="px-4 py-5 my-5">
                         <img src="https://praxor.wtf/media/oraxor.png">
                         <h1 class="display-5 fw-bold text-body-emphasis" style="font-family: Consolas, monospace;"><i>The Praxor Website</i></h1>
@@ -71,8 +70,7 @@
                     </div>
                 </div>
             </div>
-            <br>
-            <div class="py-5 px-5">
+            <div class="py-5 px-5 p-5">
                 <div class="container">
                     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 d-flex px-5 py-5">
                         <div class="col">
@@ -108,13 +106,8 @@
                 </div>
             </div>
             <div class="container">
-                <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+                <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top p-2">
                     <p class="col-md-4 mb-0 text-body-secondary">© 2023 The Praxor Industries</p>
-                    <a href="#" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="#777777" class="bi bi-arrow-up" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"/>
-                        </svg>
-                    </a>
                     <ul class="nav col-md-4 justify-content-end">
                         <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary" id="alreadyHome2">Home</a></li>
                         <li class="nav-item"><a href="https://praxor.wtf/contact" class="nav-link px-2 text-body-secondary">Contact</a></li>
