--- a/thanks/index.html
+++ b/thanks/index.html
@@ -207,24 +207,19 @@
                             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#wonderDiscordModal">Discord</button>
                         </div>
                     </div>
-                    <hr>
                 </div>
+                <hr>
             </div>
-            <div class="px-5 py-5" style="background:linear-gradient(90deg,rgba(0,151,255,0.5) 0%,rgba(54,1,119,0.5) 50%,rgba(104,34,179,0.5) 100%);">
-                    <div class="container text-center justify-content-center d-flex px-5 py-5 rounded" style="background-color:rgba(20,20,20,0.4);">
+            <div class="px-5 py-5" style="background:linear-gradient(69deg, rgba(40,3,37,0.7) 0%, rgba(104,34,179,0.7) 100%);">
+                    <div class="container text-center justify-content-center d-flex px-5 py-5 rounded" style="background-color:rgba(0,0,0,0.7);">
                         <h1>...and thanks to <a href="https://praxor.wtf/supporters" class="everyonecolor">everyone else</a>, for helping me be a praxor! ❤️</h1>
                     </div>
                 </div>
             <div class="container">
-                <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+                <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top p-2">
                     <p class="col-md-4 mb-0 text-body-secondary">© 2023 The Praxor Industries</p>
-                    <a href="#" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="#777777" class="bi bi-arrow-up" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"/>
-                        </svg>
-                    </a>
                     <ul class="nav col-md-4 justify-content-end">
-                        <li class="nav-item"><a href="https://praxor.wtf/home" class="nav-link px-2 text-body-secondary">Home</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary" id="alreadyHome2">Home</a></li>
                         <li class="nav-item"><a href="https://praxor.wtf/contact" class="nav-link px-2 text-body-secondary">Contact</a></li>
                         <li class="nav-item"><a href="https://praxor.wtf/about" class="nav-link px-2 text-body-secondary">About</a></li>
                     </ul>
