--- a/about/index.html
+++ b/about/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Whatever you do, do not go to the console and type praxorCount(number).. but replace number with the amount of times I said praxor on this page. Well, I guess this one would count. But only when I said "praxor", praxorCount doesn't count (lol). -->
 <html lang="en" data-bs-theme="dark">
     <head>
         <title>About The Praxor Website</title>
@@ -20,10 +21,29 @@
             hr {
                 border-color: #6822b3 !important;
             }
-        </style>
+            .audioCenter {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            /* Props to cargo.site for the code! */
+            .flier {
+                pointer-events: none;
+            }
+
+            .flier > * {
+                animation: fly 50s linear infinite;
+                pointer-events: none !important;
+                top: 0;
+                left: 0;
+                transform: translateX(-120%) translateY(-120%) rotateZ(0);
+                position: fixed;
+                animation-delay: 1s;
+                z-index: 999999;
+            }
+         </style>
     </head>
     <body style="background-color: #511b8c;">
-        <marquee class="bg-warning text-black" style="font-family: consolas, monospace;">The Praxor Website // Under Construction</marquee>
         <nav class="navbar navbar-expand-lg sticky-top shadow" style="background-color: #6822b3">
             <a class="navbar-brand">
                 <img src="https://praxor.wtf/media/oraxor.png" width="35" height="35" d-inline-block align-text-top>
@@ -64,8 +84,14 @@
             </div>
             <div class="px-4 py-4" style="font-family:Consolas, monospace;background-color: #6822b3">
                 <div class="container px-4 py-4 rounded" style="background-color: rgba(10,10,10,0.3);">
-                    <h2>Hello world!</h2><audio style="border-color: #6822b3 !important;" src="../media/mule.mp3" controls autoplay loop></audio>
-                    <p>I am praxor, a web developer. Pretty sad, aye? Not really, I find joy in creating websites, so I just kinda made this one for fun. Y'know, casual stuff. I made this version of my website using <a href="https://getbootstrap.com" target="_blank">Bootstrap 5.3</a>, and I have had the most fun learning and making this website with this cool design library. Anyways, there's a violent history to this website, so I am gonna share it with you now.</p>
+                    <div class="text-center">
+                        <h2>Hello world!</h2>
+                        <div class="audioCenter">
+                            <audio style="border-color: #6822b3 !important;" src="../media/mule.mp3" controls autoplay loop></audio>
+                        </div>
+                        <p class="text-dark">8-Bit Weapon - M.U.L.E. (Bitblaster Mix) (Music used on Older Versions of Praxor Website)</p>
+                    </div>
+                    <p>I am praxor, a web developer. Pretty sad, yes? Not really, I somehow happen to find joy in creating and doing the whole coding thing creative, so I just kinda made this website for fun. You know, casual stuff. I made this version of my website using <a href="https://getbootstrap.com" target="_blank">Bootstrap 5.3</a>, and I have had the most fun learning and making this website with this cool design library. Anyways, there's a violent history to this website, so I am gonna share it with you now.</p>
                     <hr>
                     <h3>Section 1: From the beginning</h3>
                     <p>ok so basically like i woke up one day, decided to get the domain praxor.tk, and then go wild with <a href="https://pages.github.com" target="_blank">Github Pages</a>. Not my proudest moment, but it certainly was a beginning for a silly goober like me who was learning HTML at the time.</p>
@@ -81,16 +107,58 @@
                     <p>When I got to this point in my website development skills, I honestly thought this was the bomb back in late 2022. I thought this was the most swagger I have ever created yet. Little did I know I was about to humble myself extremely hard. There were no CSS libraries involved, and this website involved an animated scrolling CSS gradient background (using some stolen, yet open-source code) with some text over it. This is when I realized I needed to learn more HTML because this was not the bomb, but it was eye killing glory.</p>
                     <img class="border shadow-lg" src="../media/websitescreenshot3.png" width="100%">
                     <figcaption class="text-secondary"><i>Cool image of Praxor's 2nd Website Remake (Website V3, do the meth)</i></figcaption>
+                    <hr>
+                    <h3>Section 4: Where We Are Now</h3>
+                    <p>After this release of The Praxor Website, I decided to test out some new designs, as this one was starting to get tiring. Inside this spinny thing I found more lesser known / unreleased versions of the website.</p>
+                    <!-- this code was literally copied straight from the bootstrap docs. i didnt know how to use this :P -->
+                    <div id="websiteScreenshotCarousel" class="carousel slide">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#websiteScreenshotCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#websiteScreenshotCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#websiteScreenshotCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="../media/websitescreenshot4.png" class="d-block w-100" alt="First website screenshot">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Praxor Website "V4.0"</h5>
+                                    <p>A gradient background website (bc I thought that they looked cool) (it was also not version 4.0)</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../media/websitescreenshot5.png" class="d-block w-100" alt="Second website screenshot">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Praxor's Fruitalicious Website</h5>
+                                    <p>This was a bad example of "design", and more of a mistake, hence the title. I don't know why I defended this with my life.</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../media/websitescreenshot6.png" class="d-block w-100" alt="Third website screenshot">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Praxor Website V3.3</h5>
+                                    <p>Another gradient background website. This one features a fucking flying png of a cat that flies on the screen. What the fuck! (literally, like the domain)</p>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#websiteScreenshotCarousel" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#websiteScreenshotCarousel" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                    <hr>
+                    <h3>Section 5: The Future</h3>
+                    <p>In the end, it <u>really</u> doesn't matter (live laugh love Linkin Park), and my website will continue to grow. This website took one-and-a-half months to create, mainly because I was making it in the middle of class, like the tradition, and I didn't know Bootstrap's potential, and I plan on using it for a while before I move on to some newer or fancier design. I personally consider this website to be the greatest looking website I have ever seen, but that might change soon. Furthermore, I would like to point out that there are several easter eggs placed on the website, maybe some are intentional features, it truly depends on how you want to interpret it. I also want to truly thank you for reading this about page, as it did take me some time to find the words to express myself and my website's legacy greatly. Once again...</p>
+                    <h4 class="text-center">...thank you for visiting.</h4>
                 </div>
             </div>
+            <button onclick="praxorCount(14)">Click for egg</button>
             <div class="container" style="background-color: #511b8c;">
-                <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top" style="background-color: #511b8c;border-color: #6822b3 !important;">
+                <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top p-2" style="background-color: #511b8c;border-color: #6822b3 !important;">
                     <p class="col-md-4 mb-0 text-body-secondary">© 2023 The Praxor Industries</p>
-                    <a href="#" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="#777777" class="bi bi-arrow-up" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"/>
-                        </svg>
-                    </a>
                     <ul class="nav col-md-4 justify-content-end">
                         <li class="nav-item"><a href="https://praxor.wtf/home" class="nav-link px-2 text-body-secondary">Home</a></li>
                         <li class="nav-item"><a href="https://praxor.wtf/contact" class="nav-link px-2 text-body-secondary">Contact</a></li>
@@ -99,6 +167,11 @@
                 </footer>
             </div>
         </main>
+        <div class="flier">
+            <a onclick="meowMeow.play();">
+                <img src="oraxor.png" width="100px">
+            </a>
+        </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
         <script type="text/javascript">
@@ -107,6 +180,21 @@
                 clockElement.textContent = new Date().toString();
             }
             setInterval(clock, 1000);
+        </script>
+        <script>
+            var meowMeow = new Audio('mewmewmew.wav');
+        </script>
+        <script>
+            function praxorCount(praxors) {
+                // the solution to the egg is 14, not including element tags and website links.
+                if (praxors == 14) {
+                    window.location.href = 'https://praxor.wtf/windows-2000';
+                    console.log("https://praxor.wtf/windows-2000");
+                }
+                else {
+                    console.log("nah wrong number");
+                }
+            }
         </script>
     </body>
 </html>
