--- a/supporters/index.html
+++ b/supporters/index.html
@@ -73,8 +73,14 @@
                             <tr>
                                 <th scope="row">1</th>
                                 <td>Toohi</td>
-                                <td>August 15 2021</td>
+                                <td>August 2021</td>
                                 <td>Fan Art, Music</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">2</th>
+                                <td>Louies</td>
+                                <td>October 2023</td>
+                                <td>Hot</td>
                             </tr>
                         </tbody>
                     </table>
@@ -88,15 +94,10 @@
                 </div>
             </div>
             <div class="container">
-                <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+                <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top p-2">
                     <p class="col-md-4 mb-0 text-body-secondary">© 2023 The Praxor Industries</p>
-                    <a href="#" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="#777777" class="bi bi-arrow-up" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"/>
-                        </svg>
-                    </a>
                     <ul class="nav col-md-4 justify-content-end">
-                        <li class="nav-item"><a href="https://praxor.wtf/home" class="nav-link px-2 text-body-secondary">Home</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary" id="alreadyHome2">Home</a></li>
                         <li class="nav-item"><a href="https://praxor.wtf/contact" class="nav-link px-2 text-body-secondary">Contact</a></li>
                         <li class="nav-item"><a href="https://praxor.wtf/about" class="nav-link px-2 text-body-secondary">About</a></li>
                     </ul>
