--- a/thanks/index.html
+++ b/thanks/index.html
@@ -216,13 +216,8 @@
                     </div>
                 </div>
             <div class="container">
-                <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top p-2">
-                    <p class="col-md-4 mb-0 text-body-secondary">© 2023 The Praxor Industries</p>
-                    <ul class="nav col-md-4 justify-content-end">
-                        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary" id="alreadyHome2">Home</a></li>
-                        <li class="nav-item"><a href="https://praxor.wtf/contact" class="nav-link px-2 text-body-secondary">Contact</a></li>
-                        <li class="nav-item"><a href="https://praxor.wtf/about" class="nav-link px-2 text-body-secondary">About</a></li>
-                    </ul>
+                <footer class="align-items-center py-3 my-4 border-top p-2">
+                    <p class="text-body-secondary text-center">• © 2023 The Praxor Website •</p>
                 </footer>
             </div>
             <div class="modal fade" tabindex="-1" id="toohiDiscordModal" aria-labelledby="toohiDiscord" aria-hidden="true">
