--- a/windows-98/index.html
+++ b/windows-98/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="background-color: #00807F">
+<html style="background-color: #008080">
     <head>
         <title>----------</title>
         <meta charset="UTF-8" />
