--- a/thanks/index.html
+++ b/thanks/index.html
@@ -207,6 +207,17 @@
                             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#wonderDiscordModal">Discord</button>
                         </div>
                     </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col d-flex justify-content-center">
+                            <img src="https://praxor.wtf/media/tetto.png" width="200px" height="200px">
+                        </div>
+                        <div class="col">
+                            <h1>Tetto</h1>
+                            <p>Erm. Well, they do have a pretty cute meow. Could say that it's the best meow. Uhh, that's about it. Good enough to be on the special thanks page, and definitely deserves a role in my discord server.</p>
+                            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tettoDiscordModal">Discord</button>
+                        </div>
+                    </div>
                 </div>
                 <hr>
             </div>
@@ -346,6 +357,19 @@
                         </div>
                         <div class="modal-body">
                             <p id="wonderDiscordUsername">wonder_blake</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal fade" tabindex="-1" id="tettoDiscordModal" aria-labelledby="tettoDiscord" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Tetto's discord</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p id="tettoDiscordUsername">meowking05</p>
                         </div>
                     </div>
                 </div>
