--- a/supporters/index.html
+++ b/supporters/index.html
@@ -82,6 +82,12 @@
                                 <td>October 2023</td>
                                 <td>Hot</td>
                             </tr>
+                            <tr>
+                                <th scope="row">3</th>
+                                <td>Nxne</td>
+                                <td>December 2023</td>
+                                <td>$30</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
