--- a/art/index.html
+++ b/art/index.html
@@ -326,6 +326,24 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col">
+                            <div class="card shadow-sm">
+                                <img class="card-img-top" src="https://praxor.wtf/media/fanart11.png">
+                                <div class="card-body">
+                                    <p class="card-text">This maginificent... bowling pin fan art of me is pretty nice! Created by lego_foxy, he's gotten his tactical drawing skills under control, as he created this amazing art piece!</p>
+                                    <div class="d-flex text-back">
+                                        <figure>
+                                            <blockquote class="blockquote">
+                                                <p>"yo im adding that to https://praxor.wtf/art"</p>
+                                            </blockquote>
+                                            <figcaption class="blockquote-footer">
+                                                praxor, <cite title="Date">December 2023</cite>
+                                            </figcaption>
+                                        </figure>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
