--- a/contact/index.html
+++ b/contact/index.html
@@ -69,7 +69,7 @@
                         <tb>
                             <tr>
                                 <th scope="row">1</th>
-                                <td>праксор освященный</td>
+                                <td>праксор</td>
                                 <td>praxor</td>
                                 <td>Discord</td>
                                 <td>I check this <i>often</i>. You can also join my Discord Server: <a href="https://discord.gg/rjZHDCT2MW" target="_blank">https://discord.gg/rjZHDCT2MW</a></td>
