--- a/thanks/index.html
+++ b/thanks/index.html
@@ -113,7 +113,7 @@
                         </div>
                         <div class="col">
                             <h1>Fyre</h1>
-                            <p>Even though we randomly met on Roblox, it was definitely a sure thing to have this guy as a friend! I mean come on, thi guy is literally himothy! He's funny, based, and cool, like your average 80s school movie bully, and it's respectable. He especially gets a thanks, for drawing that sexy art that you can find on my art page, at <a href="https://praxor.wtf/art">https://praxor.wtf/art</a><br><br>I didn't know what to put so that profile picture art is by <a href="https://twitter.com/hautecleare" target="_blank">https://twitter.com/hautecleare</a></p>
+                            <p>Even though we randomly met on Roblox, it was definitely a sure thing to have this guy as a friend! I mean come on, this guy is literally the silliest guy I've met! He's funny and cool, like your average 80s school movie bully, and it's respectable. He especially gets a thanks, for drawing that sexy art that you can find on my art page, at <a href="https://praxor.wtf/art">https://praxor.wtf/art</a><br><br>I didn't know what to put so that profile picture art is by <a href="https://twitter.com/hautecleare" target="_blank">https://twitter.com/hautecleare</a></p>
                             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#fyreDiscordModal">Discord</button>
                         </div>
                     </div>
@@ -123,8 +123,8 @@
                             <img src="https://louiesbox.xyz/flinky.jpg" width="200px" height="200px">
                         </div>
                         <div class="col">
-                            <h1>Louies</h1>
-                            <p>Now guys, this person may not like me, however I still should respect the fact that for a great time, that they were still a cool person to hang out with. I mean, you really couldn't ask more from Louies, as he draws some cool art that I personally enjoy. Maybe, someone out there has even framed their art on a wall! I even made a website for them once, so you should go check it out at <a href="https://louiesbox.xyz" target="_blank">https://louiesbox.xyz</a> for me, alright?</p>
+                            <h1>⭐ Louies</h1>
+                            <p>Sometimes in life, you just have to go with the flow of it. Suprisingly enough, Louies has done exactly that and let his pen create some of the most carefully developed and constructed pieces of art that I have ever seen! I've looked at most of his art pieces, and he's even made a piece for me. I was like, jumping up and down, kicking my feet back and forth when they made that art piece. They've also been a great friend, and they also kinda keep me awake in my classes (sorry teach, literature is boring) so that's like a W for me. Thank you for being here with me.</p>
                             <a class="btn btn-primary" href="https://louiesbox.xyz" target="_blank">Website</a>
                         </div>
                     </div>
