--- a/thanks/index.html
+++ b/thanks/index.html
@@ -114,7 +114,7 @@
                         <div class="col">
                             <h1>⭐ Louies</h1>
                             <p>Sometimes in life, you just have to go with the flow of it. Suprisingly enough, Louies has done exactly that and let his pen create some of the most carefully developed and constructed pieces of art that I have ever seen! I've looked at most of his art pieces, and he's even made a piece for me. I was like, jumping up and down, kicking my feet back and forth when they made that art piece. They've also been a great friend, and they also kinda keep me awake in my classes (sorry teach, literature is boring) so that's like a W for me. Thank you for being here with me.</p>
-                            <a class="btn btn-primary" href="https://louiesbox.xyz" target="_blank">Website</a>
+                            <a class="btn btn-primary" href="https://louisksocmedia.carrd.co/" target="_blank">Website</a>
                         </div>
                     </div>
                     <hr>
