--- a/thanks/index.html
+++ b/thanks/index.html
@@ -109,7 +109,7 @@
                     <hr>
                     <div class="row">
                         <div class="col d-flex justify-content-center">
-                            <img src="https://louiesbox.xyz/louies.png" width="200px" height="200px">
+                            <img src="https://praxor.wtf/media/louies.png" width="200px" height="200px">
                         </div>
                         <div class="col">
                             <h1>⭐ Louies</h1>
