--- a/thanks/index.html
+++ b/thanks/index.html
@@ -184,6 +184,16 @@
                             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tettoDiscordModal">Discord</button>
                         </div>
                     </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col d-flex justify-content-center">
+                            <img src="https://praxor.wtf/media/apple.png" width="200px" height="200px">
+                        </div>
+                        <div class="col">
+                            <h1>apple_twoo</h1>
+                            <p>10/10 Latino Gyatt.... Rizzed like a king.... Skibidi fanum tax... He's single btw he really wants a girlfriend you should date this man he's really cool. Oh, now my website is a dating website. Call the paramedics!<br>Oh yeah he's also like a wingman i think ido nt rememnber HE SOLD HE SOLD</p>
+                        </div>
+                    </div>
                 </div>
                 <hr>
             </div>
