--- a/home/index.html
+++ b/home/index.html
@@ -107,7 +107,7 @@
             </div>
             <div class="container">
                 <footer class="align-items-center py-3 my-4 border-top p-2">
-                    <p class="text-body-secondary text-center">• © 2023 The Praxor Website •</p>
+                    <p class="text-body-secondary text-center">• © 2023-2024 The Praxor Website •</p>
                 </footer>
             </div>
             <div class="toast-container position-fixed bottom-0 end-0 p-3">
