--- a/about/index.html
+++ b/about/index.html
@@ -196,7 +196,7 @@
             </div>
             <div class="container" style="background-color: #511b8c;">
                 <footer class="justify-content-between align-items-center py-3 my-4 border-top p-2" style="background-color: #511b8c;border-color: #6822b3 !important;">
-                    <p class="text-center">© 2023 The Praxor Industries</p>
+                    <p class="text-center">© 2023-2024 The Praxor Industries</p>
                 </footer>
             </div>
         </main>
