--- a/supporters/index.html
+++ b/supporters/index.html
@@ -101,7 +101,7 @@
             </div>
             <div class="container">
                 <footer class="align-items-center py-3 my-4 border-top p-2">
-                    <p class="text-body-secondary text-center">• © 2023 The Praxor Website •</p>
+                    <p class="text-body-secondary text-center">• © 2023-2024 The Praxor Website •</p>
                 </footer>
             </div>
         </main>
