--- a/thanks/index.html
+++ b/thanks/index.html
@@ -124,7 +124,7 @@
                         </div>
                         <div class="col">
                             <h1>Fyre</h1>
-                            <p>Even though we randomly met on Roblox, it was definitely a sure thing to have this guy as a friend! I mean come on, this guy is literally the silliest guy I've met! He's funny and cool, like your average 80s school movie bully, and it's respectable. He especially gets a thanks, for drawing that sexy art that you can find on my art page, at <a href="https://praxor.wtf/art">https://praxor.wtf/art</a><br><br>I didn't know what to put so that profile picture art is by <a href="https://twitter.com/hautecleare" target="_blank">https://twitter.com/hautecleare</a></p>
+                            <p>Even though we randomly met on Roblox, it was definitely a sure thing to have this guy as a friend! I mean come on, this guy is literally the silliest guy I've met! He's funny and cool, like your average 80s school movie bully, and it's respectable. He especially gets a thanks, for drawing that sexy art that you can find on my art page, at <a href="https://praxor.wtf/art">https://praxor.wtf/art</a></p>
                             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#fyreDiscordModal">Discord</button>
                         </div>
                     </div>
